--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -44,6 +44,7 @@ jobs:
           service: '${{ env.SERVICE }}'
           region: '${{ env.REGION }}'
           image: '${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/alliancecallerpreprocessor:${{ github.sha }}'
+          flags: '--memory=16Gi --cpu=4 --max-instances=10 --timeout=3600'
           
       - name: 'Show output'
         run: echo "${{ steps.deploy.outputs.url }}"
